# hydro-optimize

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  network.txt  prompt.txt  run_protocol.sh  setup_gurobi.sh  terraform_cleanup.sh
.cargo/: config.toml
.kiro/settings/: lsp.json
docs/: decoupling.mdx  index.mdx  partitioning.mdx
examples/: benchmark_paxos.rs  decouple_compute_pi.rs  partition_simple_cluster.rs  partition_two_pc.rs  perf_compute_pi.rs  perf_paxos.rs
hydro_optimize/: Cargo.toml
hydro_optimize/src/: debug.rs  decouple_analysis.rs  decoupler.rs  deploy.rs  deploy_and_analyze.rs  greedy_decouple_analysis.rs  lib.rs  parse_results.rs  partial_partitioner.rs  partial_partitioner_sealed.rs  partition_ilp_analysis.rs  partition_node_analysis.rs  partition_syn_analysis.rs  partitioner.rs  reduce_pushdown.rs  reduce_pushdown_analysis.rs  repair.rs  rewriter.rs  rewrites.rs
hydro_optimize/src/snapshots/: hydro_optimize__decoupler__tests__decouple_after_source_ir.snap  hydro_optimize__decoupler__tests__move_source_decouple_map_ir.snap  reduce_pushdown.snap
hydro_optimize/src/tests/: mod.rs  two_pc.rs
hydro_optimize/src/tests/snapshots/: hydro_optimize__tests__decoupled_compute_pi_ir.snap  hydro_optimize__tests__decoupled_compute_pi_ir@surface_graph_0.snap  hydro_optimize__tests__decoupled_compute_pi_ir@surface_graph_1.snap  hydro_optimize__tests__decoupled_compute_pi_ir@surface_graph_2.snap  hydro_optimize__tests__partitioned_simple_cluster_ir.snap  hydro_optimize__tests__partitioned_simple_cluster_ir@surface_graph_0.snap  hydro_optimize__tests__partitioned_simple_cluster_ir@surface_graph_1.snap  hydro_optimize__tests__two_pc__two_pc_partition_coordinator.snap  hydro_optimize__tests__two_pc__two_pc_partition_participant.snap
hydro_optimize_examples/: Cargo.toml
hydro_optimize_examples/examples/: benchmark_paxos.rs  benchmark_queries.rs  cas.rs  cas_write.rs  chain_replication.rs  decouple_compute_pi.rs  encrypt.rs  greedy_decouple_paxos.rs  network_calibrator.rs  partition_simple_cluster.rs  partition_two_pc.rs  paxos_optimizations.rs  perf_compute_pi.rs  perf_paxos.rs  perf_two_pc.rs  simple_graphs.rs
hydro_optimize_examples/src/: encrypt_bench.rs  lib.rs  lobsters.rs  lock_server.rs  network_calibrator.rs  simple_graphs.rs  simple_graphs_bench.rs  simple_kv_bench.rs  web_submit.rs
hydro_optimize_examples/src/chain_replication/: cas.rs  cas_distributed.rs  cas_like.rs  chain_replication_bench.rs  mod.rs
hydro_optimize_examples/src/compare_and_swap/: cas.rs  cas_bench.rs  cas_distributed.rs  cas_like.rs  cas_write_bench.rs  mod.rs
hydro_optimize_examples/src/flink_queries/: flink_queries.rs  flink_queries_bench.rs  flink_workload_generators.rs  mod.rs
scripts/: README.md  README.txt  calibrate_network.sh  generate_encrypt_exhaustive_optimizations.py  graph_anomalies.py  graph_benchmark.py  graph_calibration.py  graph_cpu.py  graph_timeseries.py  optimize.sh  parse_calibration.py  plot_throughput_latency.py
src/: debug.rs  decouple_analysis.rs  decoupler.rs  deploy.rs  deploy_and_analyze.rs  lib.rs  parse_results.rs  partition_node_analysis.rs  partition_syn_analysis.rs  partitioner.rs  repair.rs  rewrites.rs
src/snapshots/: hydro_optimize__decoupler__tests__decouple_after_source_ir.snap  hydro_optimize__decoupler__tests__move_source_decouple_map_ir.snap
src/tests/: mod.rs  two_pc.rs
src/tests/snapshots/: hydro_optimize__tests__decoupled_compute_pi_ir.snap  hydro_optimize__tests__decoupled_compute_pi_ir@surface_graph_0.snap  hydro_optimize__tests__partitioned_simple_cluster_ir@surface_graph_0.snap  hydro_optimize__tests__partitioned_simple_cluster_ir@surface_graph_1.snap  hydro_optimize__tests__two_pc__two_pc_partition_coordinator.snap
