[workspace]

members = [
    "hydro_optimize",
    "hydro_optimize_examples",
]

resolver = "2"

[workspace.dependencies]
hydro_lang = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git" }
hydro_std = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git" }
hydro_test = { version = "0.0.0", git = "https://github.com/hydro-project/hydro.git" }
dfir_lang = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git" }
hydro_build_utils = { version = "0.0.1", git = "https://github.com/hydro-project/hydro.git" }
hydro_deploy = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git", features = ["profile-folding"] }
include_mdtests = { version = "0.0.0", git = "https://github.com/hydro-project/hydro.git" }
serde = { version = "1.0.197", features = ["derive"] }
stageleft = "0.13.0"
stageleft_tool = "0.13.0"
tokio = { version = "1.29.0", features = ["full"] }
ctor = "0.2"
clap = { version = "4.4", features = ["derive"] }
regex = "1.11.1"