[workspace]

members = [
    "hydro_optimize",
    "hydro_optimize_examples",
]

resolver = "2"

[workspace.dependencies]
hydro_lang = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git" }
hydro_std = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git" }
hydro_test = { version = "0.0.0", git = "https://github.com/hydro-project/hydro.git" }
dfir_lang = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git" }
hydro_build_utils = { version = "0.0.1", git = "https://github.com/hydro-project/hydro.git" }
hydro_deploy = { version = "0.15.0", git = "https://github.com/hydro-project/hydro.git", features = ["profile-folding"] }
include_mdtests = { version = "0.0.0", git = "https://github.com/hydro-project/hydro.git" }
serde = { version = "1.0.197", features = ["derive"] }
stageleft = "0.13.0"
stageleft_tool = "0.13.0"
tokio = { version = "1.29.0", features = ["full"] }
ctor = "0.2"
clap = { version = "4.4", features = ["derive"] }
regex = "1.11.1"


# Uncomment to use on cloud desktop
# [patch."https://github.com/hydro-project/hydro.git"]
# hydro_lang = { path = "/local/home/chudc/hydroflow/hydro_lang" }
# hydro_std = { path = "/local/home/chudc/hydroflow/hydro_std" }
# hydro_test = { path = "/local/home/chudc/hydroflow/hydro_test" }
# dfir_lang = { path = "/local/home/chudc/hydroflow/dfir_lang" }
# hydro_build_utils = { path = "/local/home/chudc/hydroflow/hydro_build_utils" }
# hydro_deploy = { path = "/local/home/chudc/hydroflow/hydro_deploy/core" }
# include_mdtests = { path = "/local/home/chudc/hydroflow/include_mdtests" }

# Uncomment to use local hydro checkout on Mac
# [patch."https://github.com/hydro-project/hydro.git"]
# hydro_lang = { path = "/Users/chudc/Desktop/hydro/hydro_lang" }
# hydro_std = { path = "/Users/chudc/Desktop/hydro/hydro_std" }
# hydro_test = { path = "/Users/chudc/Desktop/hydro/hydro_test" }
# dfir_lang = { path = "/Users/chudc/Desktop/hydro/dfir_lang" }
# hydro_build_utils = { path = "/Users/chudc/Desktop/hydro/hydro_build_utils" }
# hydro_deploy = { path = "/Users/chudc/Desktop/hydro/hydro_deploy/core" }
# include_mdtests = { path = "/Users/chudc/Desktop/hydro/include_mdtests" }
