[workspace]

members = [
    "hydro_optimize",
    "hydro_optimize_examples",
]

resolver = "2"

[workspace.dependencies]
hydro_lang = { version = "0.16.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count" }
hydro_std = { version = "0.16.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count" }
hydro_test = { version = "0.0.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count" }
dfir_lang = { version = "0.16.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count" }
hydro_build_utils = { version = "0.1.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count", features = ["insta"] }
hydro_deploy = { version = "0.16.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count", features = ["profile-folding"] }
include_mdtests = { version = "0.0.0", git = "https://github.com/davidchuyaya/hydroflow.git", branch = "fix_network_pull_count" }
serde = { version = "1.0.197", features = ["derive"] }
stageleft = "0.13.5"
stageleft_tool = "0.13.5"
tokio = { version = "1.29.0", features = ["full"] }
ctor = "0.2"
clap = { version = "4.4", features = ["derive"] }
regex = "1.11.1"


# Uncomment to use on cloud desktop
# [patch."https://github.com/davidchuyaya/hydroflow.git"]
# hydro_lang = { path = "/local/home/chudc/hydroflow/hydro_lang" }
# hydro_std = { path = "/local/home/chudc/hydroflow/hydro_std" }
# hydro_test = { path = "/local/home/chudc/hydroflow/hydro_test" }
# dfir_lang = { path = "/local/home/chudc/hydroflow/dfir_lang" }
# hydro_build_utils = { path = "/local/home/chudc/hydroflow/hydro_build_utils" }
# hydro_deploy = { path = "/local/home/chudc/hydroflow/hydro_deploy/core" }
# include_mdtests = { path = "/local/home/chudc/hydroflow/include_mdtests" }

# Uncomment to use local hydro checkout on Mac
# [patch."https://github.com/davidchuyaya/hydroflow.git"]
# hydro_lang = { path = "/home/chudc/hydroflow/hydro_lang" }
# hydro_std = { path = "/home/chudc/hydroflow/hydro_std" }
# hydro_test = { path = "/home/chudc/hydroflow/hydro_test" }
# dfir_lang = { path = "/home/chudc/hydroflow/dfir_lang" }
# hydro_build_utils = { path = "/home/chudc/hydroflow/hydro_build_utils" }
# hydro_deploy = { path = "/home/chudc/hydroflow/hydro_deploy/core" }
# include_mdtests = { path = "/home/chudc/hydroflow/include_mdtests" }
