[package]
name = "hydro_optimize"
publish = true
version = "0.13.0"
documentation = "https://docs.rs/hydro_optimize/"
description = "Automatic decoupling and partitioning"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[dependencies]
good_lp = { version = "1.14.0", features = ["microlp"], default-features = false }
hydro_deploy.workspace = true
hydro_lang = { workspace = true, features = ["deploy"] }
proc-macro2 = "1.0.95"
regex.workspace = true
serde.workspace = true
stageleft.workspace = true
syn = { version = "2.0.46", features = [
    "parsing",
    "extra-traits",
    "visit-mut",
] }
tokio.workspace = true
proc-macro-crate = "3.3"
quote = "1.0.35"

[dev-dependencies]
ctor.workspace = true
hydro_build_utils.workspace = true
hydro_lang = { workspace = true, features = ["viz"] }
hydro_test.workspace = true
hydro_std.workspace = true
clap.workspace = true
include_mdtests.workspace = true

[build-dependencies]
hydro_build_utils.workspace = true