[package]
name = "hydro_optimize_examples"
publish = false
version = "0.0.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang = { git = "https://github.com/hydro-project/hydro.git" }
hydro_std = { git = "https://github.com/hydro-project/hydro.git" }
hydro_test = { git = "https://github.com/hydro-project/hydro.git" }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.9"
stageleft = "0.9.7"
tokio = { version = "1.29.0", features = ["full"] }

[dev-dependencies]
ctor = "0.2"
clap = { version = "4.4", features = ["derive"] }
dfir_lang = { git = "https://github.com/hydro-project/hydro.git" }
hydro_build_utils = { git = "https://github.com/hydro-project/hydro.git", version = "0.0.1" }
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git" }
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", features = ["deploy", "viz"] }
hydro_optimize = { path = "../hydro_optimize" }
regex = "1.11.1"

[build-dependencies]
stageleft_tool = "0.9.7"
hydro_build_utils = { git = "https://github.com/hydro-project/hydro.git", version = "0.0.1" }