[package]
name = "hydro_optimize_examples"
publish = false
version = "0.0.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true

[dependencies]
hydro_lang.workspace = true
hydro_std.workspace = true
hydro_test.workspace = true
serde.workspace = true
sha2 = "0.10.9"
stageleft.workspace = true
tokio.workspace = true

[dev-dependencies]
ctor.workspace = true
clap.workspace = true
dfir_lang.workspace = true
hydro_build_utils.workspace = true
hydro_deploy.workspace = true
hydro_lang = { workspace = true, features = ["deploy", "viz"] }
hydro_optimize = { path = "../hydro_optimize" }
regex.workspace = true

[build-dependencies]
stageleft_tool.workspace = true
hydro_build_utils.workspace = true